--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -51,7 +51,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
 
 																		  <!-- Vin display -->
 <section>
-  <div class="pt-4">
+  <div class="pt-4 hidden md:block">
     <div class="mx-auto">
       <!-- Navigation -->
       <div class="relative border-b border-gray-300">
@@ -142,7 +142,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
 
                                                                <!-- Vin beskrivelse tilhører ovenstående -->
   <!-- Dynamisk section  -->
-  <section id="dynamicContent" class="bg-red-700 text-white py-16 px-8">
+  <section id="dynamicContent" class="bg-red-700 text-white py-16 px-8 hidden md:block">
     <div class="mx-auto grid grid-cols-1 md:grid-cols-5 gap-8">
       <!-- Venstre Content -->
       <div class="md:col-span-2">
