--- a/src/components/abonnementcard.astro
+++ b/src/components/abonnementcard.astro
@@ -6,13 +6,14 @@ const {cardimage="", cardimagealt="", navn="",}= Astro.props;
 import Link from "../components/Link.astro";
 ---
 
-<article class="card @container border-1 border-black lg:px-2 px-12 pb-4">
+<article class="card @container border-1 border-black lg:px-2 px-12">
     <div class="flex flex-col h-full">
         <div class="relative pt-4">
             <img src={cardimage} alt={cardimagealt} class="object-cover w-full">
         </div>
-        <div class="grid grid-cols-3 grid-rows-2 ">
+        <div class="">
     <h4 class="">{navn}</h4>
+    <Button>Køb nu</Button>
     </div>
     </div>  
       
