--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,6 @@ import { Image } from 'astro:assets';
 import { useRef } from 'react';
 import gsap from 'gsap';
 import { useGSAP } from '@gsap/react';
-import filler from "../assets/images/filler.png";
 import herotext from "../assets/images/herotext.svg";
 import bordvin from "../assets/images/bordvin.svg";
 import logo from "../assets/images/logo.svg";
@@ -48,7 +47,7 @@ import vin5 from "../assets/images/vin5.png"
     <!-- Text og Logo Section -->
     <div class="md:col-span-6">
 		<div class="flex justify-between items-center content-center place-content-center	">
-      <h2 class="text-red-600 text-xl sm:text-3xl lg:text-5xl">VIN PÅ ABONNEMENT</h2>
+      <h2 class="text-red-600  text-xs lg:text-5xl">VIN PÅ ABONNEMENT</h2>
         <img src={logo.src} alt="Logo" class="w-24 h-24">
 		</div>
     </div>
