--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -3,7 +3,6 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import { Image } from 'astro:assets';
 import explorewinesfooter from "../assets/images/explorewinesfooter.svg";
-
 import '../styles/tailwind.css';
 import 'animate.css';
 const { title } = Astro.props;
@@ -15,6 +14,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{Astro.props.title}</title>
+		<link rel="stylesheet" href="https://use.typekit.net/fjw5dki.css"></link>
 	</head>
 	<body class="">
 
