--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,8 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
-    /* p{
+@layer base {
+  /* p{
         @apply text-body;
     } */
+  h1 {
+    @apply text-[4.5rem];
+    @apply font-regular;
+    @apply text-brown;
+  }
 }
