--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,8 @@ import MainLayout from "../layouts/MainLayout.astro";
 import Button from '../components/Button.astro';
 import Link from '../components/Link.astro';
 import { Image } from 'astro:assets';
-import headerlogo from '../assets/images/headerlogo.svg';
+import headerlogo from '../assets/images/logo-m-baggrund-s-tyk.svg';
+import headerlogotext from '../assets/images/logotext.svg';
 import hamburger from '../assets/images/hamburger.svg';
 import kurv from '../assets/images/kurv.svg';
 import login from '../assets/images/login.svg';
@@ -17,7 +18,7 @@ import login from '../assets/images/login.svg';
   <!-- Venstre side: Logo -->
   <a href="/" class="flex items-center gap-4">
     <img src={headerlogo.src} alt="ExploreWines Logo" class="w-10 h-10" />
-    <h1 class="text-2xl font-bold text-gray-900">EXPLOREWINES</h1>
+    <img src={headerlogotext.src} alt="ExploreWines Logo" class="w-10 h-10" />
   </a>
 
 <!-- Center: Navigation Links (Hidden on Mobile) -->
