--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -4,7 +4,7 @@ import buttonarrow from "../assets/images/buttonarrow.svg"
 const { variant = "primary" } = Astro.props;
 
 const buttonStyling =
-  "group border border-black py-1.5 px-3 md:py-2 md:px-4 text-xs md:text-base rounded-3xl inline-flex flex-nowrap items-center gap-2 justify-between hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors duration-150";
+  "group border border-brown py-1.5 px-3 md:py-2 md:px-4 text-mmb md:text-m rounded-3xl inline-flex flex-nowrap items-center gap-2 justify-between hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors";
 ---
 <div>
   <button
@@ -14,7 +14,7 @@ const buttonStyling =
     <slot></slot>
     <!-- SVG med rotation og fill ændring -->
     <svg
-      class={`w-4 h-4 md:w-6 md:h-6 transition-colors duration-150 group-hover:fill-creamywhite ${
+      class={`w-4 h-4 md:w-6 md:h-6 transition-colors group-hover:fill-creamywhite ${
         variant === "secondary" ? "rotate-180" : ""
       }`}
       xmlns="http://www.w3.org/2000/svg"
