--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,15 +10,15 @@ import kurv from '../assets/images/kurv.svg';
 import login from '../assets/images/login.svg';
 ---
   <!-- Top fragt-banner -->
-<div class="mx-auto flex place-content-center bg-black text-white">
-    <p class="text-xs my-2">FRI FRAGT VED KØB AF VINKASSE PÅ ABONNEMENT</p>
+<div class="mx-auto flex place-content-center bg-brown text-creamywhite">
+    <p class="text-xsmb md:text-xs my-2">FRI FRAGT VED KØB AF VINKASSE PÅ ABONNEMENT</p>
 </div>
 
-<div class="mx-auto flex items-center justify-between py-4 px-8 border-b border-black">
+<div class="mx-auto flex items-center justify-between py-4 border-b border-brown px-1 md:px-3">
   <!-- Venstre side: Logo -->
-  <a href="/" class="flex items-center gap-4">
+  <a href="/" class="flex items-center gap-1">
     <img src={headerlogo.src} alt="ExploreWines Logo" class="w-10 h-10" />
-    <img src={headerlogotext.src} alt="ExploreWines Logo" class="w-10 h-10" />
+    <img src={headerlogotext.src} alt="ExploreWines Logo" class="w-[6.6rem]" />
   </a>
 
 <!-- Center: Navigation Links (Hidden on Mobile) -->
