--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -4,7 +4,7 @@ import buttonarrow from "../assets/images/buttonarrow.svg"
 const { variant = "primary" } = Astro.props;
 
 const buttonStyling =
-  "group border border-brown py-1.5 px-3 md:py-2 md:px-4 text-mmb md:text-m rounded-3xl inline-flex flex-nowrap items-center gap-2 justify-between hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors";
+  "group border border-brown py-1.5 px-3 md:py-2 md:px-4 text-smb md:text-s rounded-3xl inline-flex flex-nowrap items-center gap-3 justify-between hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors";
 ---
 <div>
   <button
