--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -29,7 +29,7 @@ import login from '../assets/images/login.svg';
       <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
     </svg>
   </a>
-  <div class="absolute hidden group-hover:block bg-white border border-black w-40">
+  <div class="absolute hidden group-hover:block bg-creamywhite pt-2 w-40">
     <a href="/rodwin" class="block px-4 py-2 text-gray-800 hover:underline hover:bg-gray-100">Rødvinskasse</a>
     <a href="/abonnement/hvidvinskasse" class="block px-4 py-2 text-gray-800 hover:underline hover:bg-gray-100">Hvidvinskasse</a>
     <a href="/abonnement/mixkasse" class="block px-4 py-2 text-gray-800 hover:underline hover:bg-gray-100">Mixkasse</a>
@@ -91,11 +91,11 @@ import login from '../assets/images/login.svg';
 </div>
 
 <!-- Søge felt -->
-<div class="my-2 border-b border-black">
+<div class="my-2 border-b border-brown">
   <div class="flex items-center px-8">
     <svg
       xmlns="http://www.w3.org/2000/svg"
-      class="w-5 h-5 text-black"
+      class="w-5 h-5 text-brown"
       fill="none"
       viewBox="0 0 24 24"
       stroke="currentColor"
@@ -118,7 +118,7 @@ import login from '../assets/images/login.svg';
 <!-- Mobile Dropdown Menu -->
 <div
   id="mobile-menu"
-  class="hidden md:hidden bg-white py-4 border-b border-black"
+  class="hidden md:hidden bg-creamywhite py-4 border-b border-brown"
 >
   <nav class="flex flex-col ml-8 gap-4">
     <a href="/abonnement" class="text-lg font-medium text-gray-800 hover:underline">Vinabonnement</a>
