--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 		<title>{Astro.props.title}</title>
 		<link rel="stylesheet" href="https://use.typekit.net/fjw5dki.css"></link>
 	</head>
-	<body class="">
+	<body class="bg-creamywhite">
 
 		<header class="">
 			<Header></Header>
